--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,11 @@
-payment.service.url = http://localhost:8082/payment-service/checkPayment
+eureka:
+  client:
+    eureka-server-port: 8761
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    
+ spring:
+  application:
+    name: Employee-data-service-from-config
