--- a/application-dev.properties
+++ b/application-dev.properties
@@ -6,6 +6,4 @@ eureka:
   instance:
     prefer-ip-address: true
     
- spring:
-  application:
-    name: Employee-data-service-from-config-dev
+ spring.application.name: Employee-data-service-from-config-dev
