--- a/application-qa.properties
+++ b/application-qa.properties
@@ -5,7 +5,4 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
-    
- spring:
-  application:
-    name: Employee-data-service-from-config-qa
+spring.application.name= Employee-data-service-from-config-qa
